deploy: 52d2d2c1ceb2000640a529467d29fbf5be21724c

--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "670be114",
+   "id": "fd196424",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8334373c",
+   "id": "d8397efb",
    "metadata": {},
    "source": [
     "1. geometry\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c59e5ea",
+   "id": "6949e2e5",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf772552",
+   "id": "f4fb3724",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aad5c630",
+   "id": "f31cd7fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:46.666122Z",
-     "iopub.status.busy": "2024-11-29T13:26:46.665942Z",
-     "iopub.status.idle": "2024-11-29T13:26:51.386307Z",
-     "shell.execute_reply": "2024-11-29T13:26:51.385654Z"
+     "iopub.execute_input": "2025-01-22T10:39:20.903197Z",
+     "iopub.status.busy": "2025-01-22T10:39:20.903008Z",
+     "iopub.status.idle": "2025-01-22T10:39:25.515981Z",
+     "shell.execute_reply": "2025-01-22T10:39:25.515345Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28dc6c67",
+   "id": "c8136135",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fc70cef",
+   "id": "346b6d49",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:51.388446Z",
-     "iopub.status.busy": "2024-11-29T13:26:51.388023Z",
-     "iopub.status.idle": "2024-11-29T13:26:51.699654Z",
-     "shell.execute_reply": "2024-11-29T13:26:51.698986Z"
+     "iopub.execute_input": "2025-01-22T10:39:25.518152Z",
+     "iopub.status.busy": "2025-01-22T10:39:25.517687Z",
+     "iopub.status.idle": "2025-01-22T10:39:25.807461Z",
+     "shell.execute_reply": "2025-01-22T10:39:25.806427Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07239193",
+   "id": "01340e87",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8270aa",
+   "id": "47fe7bb8",
    "metadata": {},
    "source": [
     "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7b6bae6",
+   "id": "9516985c",
    "metadata": {},
    "source": [
     "$$\\bf{v} = \\frac{-i}{\\hbar} [H, \\bf{P}]$$"
@@ -137,13 +137,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff8c1c07",
+   "id": "a9babadc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:51.702904Z",
-     "iopub.status.busy": "2024-11-29T13:26:51.702230Z",
-     "iopub.status.idle": "2024-11-29T13:26:56.654059Z",
-     "shell.execute_reply": "2024-11-29T13:26:56.653506Z"
+     "iopub.execute_input": "2025-01-22T10:39:25.810325Z",
+     "iopub.status.busy": "2025-01-22T10:39:25.810078Z",
+     "iopub.status.idle": "2025-01-22T10:39:30.653744Z",
+     "shell.execute_reply": "2025-01-22T10:39:30.653170Z"
     }
    },
    "outputs": [
@@ -151,13 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RHS compiled\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "RHS compiled\n",
       "RHS compiled\n"
      ]
     },
@@ -197,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d31855",
+   "id": "6da6b48b",
    "metadata": {},
    "source": [
     "A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial."
@@ -205,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f597186b",
+   "id": "e1fc33cb",
    "metadata": {},
    "source": [
     "We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits"
@@ -214,13 +208,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "91953adf",
+   "id": "ffad8d98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:56.655995Z",
-     "iopub.status.busy": "2024-11-29T13:26:56.655790Z",
-     "iopub.status.idle": "2024-11-29T13:26:57.164195Z",
-     "shell.execute_reply": "2024-11-29T13:26:57.163571Z"
+     "iopub.execute_input": "2025-01-22T10:39:30.655653Z",
+     "iopub.status.busy": "2025-01-22T10:39:30.655453Z",
+     "iopub.status.idle": "2025-01-22T10:39:31.182849Z",
+     "shell.execute_reply": "2025-01-22T10:39:31.182249Z"
     }
    },
    "outputs": [
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ebf191e",
+   "id": "84573962",
    "metadata": {},
    "source": [
     "Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid."
@@ -249,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72262930",
+   "id": "a494e720",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -257,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f22422c",
+   "id": "f3611f04",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -265,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "506502e4",
+   "id": "08aed945",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake"
@@ -274,13 +268,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a736755",
+   "id": "76c78a4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:57.166913Z",
-     "iopub.status.busy": "2024-11-29T13:26:57.166514Z",
-     "iopub.status.idle": "2024-11-29T13:26:57.627110Z",
-     "shell.execute_reply": "2024-11-29T13:26:57.626461Z"
+     "iopub.execute_input": "2025-01-22T10:39:31.185114Z",
+     "iopub.status.busy": "2025-01-22T10:39:31.184896Z",
+     "iopub.status.idle": "2025-01-22T10:39:31.611830Z",
+     "shell.execute_reply": "2025-01-22T10:39:31.611198Z"
     }
    },
    "outputs": [
@@ -301,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2090d1",
+   "id": "44b1e198",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -310,13 +304,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "15afbc1d",
+   "id": "259db487",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:26:57.629146Z",
-     "iopub.status.busy": "2024-11-29T13:26:57.628739Z",
-     "iopub.status.idle": "2024-11-29T13:26:58.099433Z",
-     "shell.execute_reply": "2024-11-29T13:26:58.098886Z"
+     "iopub.execute_input": "2025-01-22T10:39:31.613742Z",
+     "iopub.status.busy": "2025-01-22T10:39:31.613557Z",
+     "iopub.status.idle": "2025-01-22T10:39:32.077595Z",
+     "shell.execute_reply": "2025-01-22T10:39:32.076988Z"
     }
    },
    "outputs": [
@@ -337,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8f485f",
+   "id": "f5138827",
    "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
@@ -360,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
