--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c2e75b6b",
+   "id": "bfa925f2",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d4a2d6",
+   "id": "58d7a296",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cb1527f",
+   "id": "24bb29c4",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7451f7",
+   "id": "6affd17f",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a732a330",
+   "id": "a7080b8f",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c272a83",
+   "id": "f877d629",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3f0278b",
+   "id": "e882fddf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:44.048339Z",
-     "iopub.status.busy": "2024-11-29T13:28:44.048167Z",
-     "iopub.status.idle": "2024-11-29T13:28:48.276588Z",
-     "shell.execute_reply": "2024-11-29T13:28:48.276033Z"
+     "iopub.execute_input": "2025-01-22T10:38:48.204282Z",
+     "iopub.status.busy": "2025-01-22T10:38:48.204109Z",
+     "iopub.status.idle": "2025-01-22T10:38:52.447986Z",
+     "shell.execute_reply": "2025-01-22T10:38:52.447374Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845e7e0f",
+   "id": "3af68229",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba95875",
+   "id": "c00d0723",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4ef193",
+   "id": "c8ada0e3",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f12ae12",
+   "id": "2b9b19c5",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54b47e9",
+   "id": "3d01a8d1",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e4da90",
+   "id": "f36a2e26",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4fc0827",
+   "id": "b6394d0e",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6fc4076",
+   "id": "34e37ae2",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ee015a4",
+   "id": "9f52e3a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:48.279005Z",
-     "iopub.status.busy": "2024-11-29T13:28:48.278561Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.168280Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.167642Z"
+     "iopub.execute_input": "2025-01-22T10:38:52.450204Z",
+     "iopub.status.busy": "2025-01-22T10:38:52.449760Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.347862Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.347306Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a085d471",
+   "id": "86d69cd9",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea3afe72",
+   "id": "b0fb701f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.170573Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.170227Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.173961Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.173293Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.349881Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.349484Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.352951Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.352374Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51fdaf3b",
+   "id": "03ee729a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ae4c3f",
+   "id": "65e905fb",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d284bd65",
+   "id": "f26c0ea9",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac024ee",
+   "id": "c4b29023",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c67e41a6",
+   "id": "a269556d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.175737Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.175551Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.218844Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.218315Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.354970Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.354614Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.400236Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.399655Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8b66bc",
+   "id": "fa91ddfa",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec796f40",
+   "id": "4a7b1c55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.220836Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.220495Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.287005Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.286384Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.402216Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.401842Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.470335Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.469759Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c65555",
+   "id": "67598470",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f89201",
+   "id": "945ec3f7",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "11c6712c",
+   "id": "1455cf69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.289364Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.288983Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.317583Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.317083Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.472211Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.472024Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.501612Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.501040Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a10bc0",
+   "id": "61ca823c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a80363c",
+   "id": "5d99dfc8",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00e6279",
+   "id": "2b691da0",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7af5e04",
+   "id": "15b9ad0e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5015053a",
+   "id": "d1f8dcfa",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6992b9a9",
+   "id": "8b7ec553",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.319785Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.319328Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.323639Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.323117Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.503466Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.503281Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.507310Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.506776Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f94e64",
+   "id": "8a647f50",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d7d26740",
+   "id": "4fe6398a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.325592Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.325242Z",
-     "iopub.status.idle": "2024-11-29T13:28:50.328256Z",
-     "shell.execute_reply": "2024-11-29T13:28:50.327614Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.509180Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.508858Z",
+     "iopub.status.idle": "2025-01-22T10:38:54.511745Z",
+     "shell.execute_reply": "2025-01-22T10:38:54.511256Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20691d4",
+   "id": "d6c3a75e",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb55fd11",
+   "id": "2a4503f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:50.330290Z",
-     "iopub.status.busy": "2024-11-29T13:28:50.329946Z",
-     "iopub.status.idle": "2024-11-29T13:28:52.931288Z",
-     "shell.execute_reply": "2024-11-29T13:28:52.930742Z"
+     "iopub.execute_input": "2025-01-22T10:38:54.513466Z",
+     "iopub.status.busy": "2025-01-22T10:38:54.513292Z",
+     "iopub.status.idle": "2025-01-22T10:38:57.089147Z",
+     "shell.execute_reply": "2025-01-22T10:38:57.088522Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "175a8321",
+   "id": "881bef5b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca355754",
+   "id": "450cc801",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8718803",
+   "id": "5db9a65b",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c087c02b",
+   "id": "7460c606",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5883f439",
+   "id": "3526ae94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:52.933430Z",
-     "iopub.status.busy": "2024-11-29T13:28:52.933044Z",
-     "iopub.status.idle": "2024-11-29T13:28:52.936717Z",
-     "shell.execute_reply": "2024-11-29T13:28:52.936128Z"
+     "iopub.execute_input": "2025-01-22T10:38:57.091280Z",
+     "iopub.status.busy": "2025-01-22T10:38:57.090930Z",
+     "iopub.status.idle": "2025-01-22T10:38:57.094516Z",
+     "shell.execute_reply": "2025-01-22T10:38:57.093878Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff0b5c0ba60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5df1bb7380>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd7cd280",
+   "id": "765100fb",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa64db02",
+   "id": "2b9ddf68",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9608d7b1",
+   "id": "6cf57154",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f678332d",
+   "id": "dccc28f1",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e77d9f6b",
+   "id": "d0d47554",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:52.938684Z",
-     "iopub.status.busy": "2024-11-29T13:28:52.938343Z",
-     "iopub.status.idle": "2024-11-29T13:28:52.941509Z",
-     "shell.execute_reply": "2024-11-29T13:28:52.940940Z"
+     "iopub.execute_input": "2025-01-22T10:38:57.096256Z",
+     "iopub.status.busy": "2025-01-22T10:38:57.096064Z",
+     "iopub.status.idle": "2025-01-22T10:38:57.099531Z",
+     "shell.execute_reply": "2025-01-22T10:38:57.098970Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c2a3050d",
+   "id": "2bcb4919",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-29T13:28:52.943318Z",
-     "iopub.status.busy": "2024-11-29T13:28:52.942990Z",
-     "iopub.status.idle": "2024-11-29T13:28:54.022630Z",
-     "shell.execute_reply": "2024-11-29T13:28:54.021959Z"
+     "iopub.execute_input": "2025-01-22T10:38:57.101406Z",
+     "iopub.status.busy": "2025-01-22T10:38:57.101065Z",
+     "iopub.status.idle": "2025-01-22T10:38:58.172141Z",
+     "shell.execute_reply": "2025-01-22T10:38:58.171576Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
